# PianoBooster

./: .gitignore  BUILD.md  BUILD.txt  CMakeLists.txt  Changelog.txt  README-OSX.txt  README-macOS.md  README.md  ReleaseNotes.txt  TODO.md  license.txt  pianobooster.6  pianobooster.desktop  pianobooster.pro  pianobooster.spec
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
Documentation/: README.md  download.md  faq.md  pianohints.md  screenshots.md
Misc/: ToDo.txt
Music/: AmazingGrace.abc  AmazingGrace.mma  AmazingGraceMid.abc  FrereJacques.abc  FrereJacques.mma  Greensleeves.abc  Greensleeves.mma  Makefile  ScarboroughFair.abc  ScarboroughFair.mma  SkipToMyLoo.mma  makeall  makemusic  makescore  music.html.end  music.html.start  music.md.end
Music/Beginner/: ChordOfCMajor.mma
Music/Beginner Course/: Booster44Lib.mma  ChordOfCMajor.mma  ChordOfCMajor_en.md  ChordOfFMajor.abc  ClairDeLaLune.mma  DownAndUp.mma  LeftHandFMajorChord.abc  LeftHandFMajorChord.mma  StartWithMiddleC.mma  UpAndDown.abc  UpAndDown.mma
Music/BeginnerCourse/: ChordOfCMajor.abc  ChordOfCMajor.mma  ClairDeLaLune_en.md  DownAndUp.abc  StartWithMiddleC.abc  StartWithMiddleC_en.md  UpAndDown.abc  UpAndDown_en.md
Music/Booster/: AmazingGrace.mma  LavendersBlue-keep.mma  ScarboroughFair.abc  ScarboroughFair.mma
Music/Booster Music/: Greensleeves.mma  LavendersBlue.mma  LavendersBlue_en.md
Music/BoosterMusic/: AmazingGraceMid.abc  ClairDeLaLune_en.md  SkipToMyLoo.abc
PianoBooster/: BUILD.txt  CMakeLists.txt  README-OSX.txt  README.md  README.txt  license.txt
PianoBooster/debian/: control  pianobooster.install
PianoBooster/doc/: README.md  index.html
PianoBooster/music/: CMakeLists.txt
PianoBooster/src/: Bar.cpp  Bar.h  CMakeLists.txt  Cfg.cpp  Cfg.h  Chord.cpp  Chord.h  Conductor.cpp  Conductor.h  Draw.cpp  Draw.h  GlView.cpp  GlView.h  GuiKeyboardSetupDialog.cpp  GuiKeyboardSetupDialog.h  GuiKeyboardSetupDialog.ui  GuiLoopingDialog.cpp  GuiLoopingDialog.h  GuiLoopingDialog.ui  GuiLoopingPopup.cpp  GuiLoopingPopup.h  GuiMidiSetupDialog.cpp  GuiMidiSetupDialog.h  GuiMidiSetupDialog.ui  GuiPreferencesDialog.cpp  GuiPreferencesDialog.h  GuiPreferencesDialog.ui  GuiSidePanel.cpp  GuiSidePanel.h  GuiSidePanel.ui  GuiSongDetailsDialog.cpp  GuiSongDetailsDialog.h  GuiSongDetailsDialog.ui  GuiTopBar.cpp  GuiTopBar.h  GuiTopBar.ui  Merge.cpp  Merge.h  MidiDevice.cpp  MidiDevice.h  (+43 more)
PianoBooster/src/precompile/: precompile.h
PianoBooster/src/rtmidi/: RtTimer.cpp  RtTimer.h
PianoBooster/translations/: CMakeLists.txt  pianobooster_blank.ts  pianobooster_es.ts  pianobooster_fr.ts  pianobooster_ja.ts  pianobooster_ja_JP.ts
PianoBooster/win32/: pianobooster.nsi
Website/: download.html  faq.html  html4css1.css  index.html  pianohints.html  ref.css  screenshots.html
debian/: README.Debian  changelog  control  copyright  pianobooster.6  pianobooster.desktop  pianobooster.install  pianobooster.manpages  pianobooster.menu  pianobooster.xpm  rules  watch
debian/patches/: armel.patch  gcc-4.7.patch  i18n.patch  link-pthread-and-GL-explicitly.patch  linker_opts.patch  paths.patch  rtmidi-1.0.15.patch  series  typos.patch
debian/source/: include-binaries
debian/upstream/: metadata
doc/: README.md  download.md  faq.md  pianohints.md
doc/courses/: README.html  README.md
icons/MacOS/: pianobooster.icns
music/: CMakeLists.txt  README.md
music-src/: Makefile  music.md.end  music.md.start
music-src/BeginnerCourse/: 01-StartWithMiddleC.mma  02-ChordOfCMajor.mma  02-ChordOfCMajor_en.md  03-UpAndDown.mma  04-ClairDeLaLune.abc  04-ClairDeLaLune.mma  04-ClairDeLaLune_en.md  05-ChordOfFMajor.mma  05-ChordOfFMajor_en.md  06-DownAndUp.mma  ChordOfCMajor_en.md  ChordOfCMajor_ru.md  ChordOfFMajor.mma  ChordOfFMajor_en.md  ChordOfFMajor_ru.md  ClairDeLaLune_en.md  ClairDeLaLune_ru.md  DownAndUp.mma  (+8 more)
reStructuredText/: faq.rst  includeend.rst  includestart.rst  pbrst.css  ref.css  run-rst.sh
src/: Bar.cpp  Bar.h  CMakeLists.txt  Cfg.cpp  Cfg.h  Chord.cpp  Chord.h  Conductor.cpp  Conductor.h  Doxyfile  Draw.cpp  Draw.h  GlView.cpp  GlView.h  GuiHighScoreWindow.ui  GuiKeyboardSetupDialog.cpp  GuiKeyboardSetupDialog.h  GuiKeyboardSetupDialog.ui  GuiLoopingPopup.cpp  GuiLoopingPopup.h  GuiLoopingPopup.ui  GuiMetronomeDialog.cpp  GuiMetronomeDialog.h  GuiMetronomeDialog.ui  GuiMidiSetupDialog.cpp  GuiMidiSetupDialog.h  GuiMidiSetupDialog.ui  GuiPreferencesDialog.cpp  GuiPreferencesDialog.h  GuiPreferencesDialog.ui  GuiSidePanel.cpp  GuiSidePanel.h  GuiSidePanel.ui  GuiSongDetailsDialog.cpp  GuiSongDetailsDialog.h  GuiSongDetailsDialog.ui  GuiTopBar.cpp  GuiTopBar.h  GuiTopBar.ui  IColorPreference.h  (+52 more)
src/colorthemes/: Babyroom.ini  Birds.ini  Default Theme.ini  Ducks.ini  Earth.ini  Flower.ini  Flower2.ini  Flower3.ini  Galaxy.ini  Handnotes.ini  Horses.ini  Mars.ini  Ocean.ini  Piano.ini  Pianokeys.ini  Plant.ini  Saturn.ini  Vintageplayer.ini  Waterfall.ini  Winter.ini
src/files/metronome-patterns/: README.md
src/images/: README.txt
src/images/background/: note.txt
src/metronome-patterns/: Drums_Ballad-Quiet.txt  Drums_Ballad.txt  Metronome_Clicks.txt  Metronome_Woodblock.txt  Off.txt  README.md
src/precompile/: PCHSupport.cmake  precompile.h
tools/: conv_html_to_ts.pl  lupdate.sh  make_music.sh
translations/: .gitignore  CMakeLists.txt  langs.json  music_blank.ts  music_cs.ts  music_de.ts  music_es.ts  music_fr.ts  music_pl.ts  music_ru.ts  music_uk.ts  pianobooster_af.ts  pianobooster_am.ts  pianobooster_ar.ts  pianobooster_as.ts  pianobooster_ast.ts  pianobooster_az.ts  pianobooster_be.ts  pianobooster_bg.ts  pianobooster_blank.ts  pianobooster_bn.ts  pianobooster_br.ts  pianobooster_bs.ts  pianobooster_bs_BA.ts  pianobooster_bs_Latn.ts  pianobooster_ca.ts  pianobooster_crh.ts  pianobooster_cs.ts  pianobooster_csb.ts  pianobooster_cy.ts  pianobooster_da.ts  pianobooster_de.ts  pianobooster_dz.ts  pianobooster_el.ts  pianobooster_eo.ts  pianobooster_es.ts  pianobooster_et.ts  pianobooster_eu.ts  pianobooster_fa.ts  pianobooster_fi.ts  (+75 more)
win32/: pianobooster.nsi
(+166 files in other folders)
